# SpudBuddy

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  README.md  asset-manifest.json  compile.sh  index.html  install_ZMQ.sh  install_pre_reqs.sh  setup_can.sh  test.py  test2.py
drake/: DrakeDrive.py  setup.py  setup.sh  sim.py
drake/RON/urdf/: RON.SLDASM.csv
drake/RON/urdf/meshes/: arm_left_1.STL  arm_left_2.STL  arm_right_1.STL  arm_right_2.STL  base_link.STL  left_motor.STL  right_motor.STL
frontend/farm_app/: package.json
frontend/farm_app/public/: CNAME
frontend/farm_app/src/: DataPanel.js  PlantPanel.css  PlantPanel.js  SettingsPanel.js  connection.css  connection.js  index.css  index.js  movementControlPanel.css  movmentControlPanel.js  settingsPanel.css  threeView.js
frontend/farm_app/src/assets/: sample_json.json
frontend/ron_app/: package-lock.json  package.json
frontend/ron_app/public/: index.html
frontend/ron_app/src/: connection.js  index.js  joy.css  joy.js  optionsView.js  threeView.js  videoView.js
server/: camera.py  client.js  db_functions.py  flask_config.json  generate_json.py  git_commands.py  index.html  main.py  mmap_functions.py  ron_server.service  setup.py  setup.sh  start.sh  test.py  zmq_functions.py
server/static/: home.js  joy.js  joyComponent.mjs  videoComponent.mjs
server/static/RON/: CMakeLists.txt  package.xml
server/static/RON/meshes/: RON.urdf  arm_left_1.STL  arm_left_2.STL  arm_right_1.STL  base_link.STL
server/static/RON/urdf/: RON.urdf
server/templates/: 3dview.html  chart.html  home.html  image_gallery.html  path.html  ron.html  stream.html  tunning.html  view_image.html  view_images.html
src/: CMakeLists.txt  DrakeReader.cpp  DrakeReader.h  DriveSystem.cpp  DriveSystem.h  FSM.cpp  FSM.h  IMUReader.cpp  IMUReader.h  Logging.cpp  Logging.h  ZEDReader.cpp  ZEDReader.h  autogen_py.py  cmd.cpp  cmd.h  common.h  controller.cpp  controller.h  controllerThread.cpp  controllerThread.h  driveSystem.cpp  driveSystem.h  generated_python_script.cpp  generated_python_script.py  joystick.cpp  joystick.h  logger.h  loggerSimple.h  loggerThreaded.cpp  loggerThreaded.h  main.cpp  main.h  ronThread.cpp  ronThread.h  sdata.cpp  sdata.h  sdata_py.cpp  shared_structs.h
src/drivers/: CMakeLists.txt
src/drivers/ODriveCAN/: CMakeLists.txt  ODriveCAN.cpp  ODriveCAN.h
src/drivers/bno055/: BNO055.cpp  BNO055.h  CMakeLists.txt
src/libraries/: CMakeLists.txt
src/libraries/sdata/: CMakeLists.txt  compile.sh  sdata.cpp  sdata.h  sdata.pc.in  sdataConfig.cmake.in
src/libraries/sdata/include/: sdata.hpp  test_sdata.hpp
src/sim_code/: DrakeReader.h
static/css/: main.72735ce7.css  main.72735ce7.css.map  main.8e886491.css  main.8e886491.css.map  main.912b2741.css  main.912b2741.css.map  main.9600b4bf.css  main.9600b4bf.css.map  main.c01a0357.css  main.c01a0357.css.map  main.c8cbce30.css  main.c8cbce30.css.map  main.c8f06bac.css  main.c8f06bac.css.map
static/js/: 453.f1c36540.chunk.js  453.f1c36540.chunk.js.map  main.2128233b.js  main.351a5f65.js  main.3543028b.js  main.36bdb279.js  main.6fe9e2a4.js  main.790f118b.js  main.83315b89.js  main.86780e07.js  main.86bc929a.js  main.8c3d0f8a.js  main.b586f30d.js  main.dcf9bf06.js  main.e04977ee.js  main.f577c1d5.js  main.f577c1d5.js.LICENSE.txt
